09 Dev 2001 SIE PER enhancements - Jan Jaeger
06 Dec 2001 Basic PER implemention - Jan Jaeger
05 Dec 2001 Corrected ref and change bits on loadtext - Jan Jaeger
04 Dec 2001 Rewrite of trace including full 64 bit support - Jan Jaeger
28 Nov 2001 Reset device status in device_reset() for ckd dev - Jan Jaeger
28 Nov 2001 Alignment fixes for SPARC64 - Matt Zimmerman
28 Nov 2001 Bypass syncio if track overflow or data chaining - Valery
            Pogonchenko
28 Nov 2001 Remove SIGHUP usage - Jan Jaeger
28 Nov 2001 Fix interval timer - Jan Jaeger
28 Nov 2001 Fix unintended exit when CPU 0 is deconfigured - Matt Zimmerman
22 Nov 2001 Cancel Subchannel (XSCH) function and instruction - Jan Jaeger
21 Nov 2001 OPTION_SYNCIO *is* compatible with OPTION_FISHIO - Greg Smith
18 Nov 2001 Synchronous I/O - Greg Smith
18 Nov 2001 Add OPTION_IODELAY to bypass linux/zseries bug - Jan Jaeger
18 Nov 2001 Change OSTAILOR LINUX to reflect IEEE support - Jan Jaeger
18 Nov 2001 Add LCEBR/LCDBR/LCXBR IEEE float instructions - Jan Jaeger
16 Nov 2001 Reduce timer.c pthreads calls and logic isolation - Greg Smith
16 Nov 2001 Correct storage keys after ipl from cdrom - Jan Jaeger
16 Nov 2001 Added savecore command - Jan Jaeger
15 Nov 2001 RCHP and SCHM fixes for PIC 15 - Paul Leisy
13 Nov 2001 Fix MVPG so it gets PIC 04 when FPO on - Paul Leisy
13 Nov 2001 Fix CUSE when last byte is part of equality - Paul Leisy
13 Nov 2001 Fix halt and clear subchannel on CTC type devices - Jan Jaeger
13 Nov 2001 Fix logmsg macro to appear as a singular statement - Jan Jaeger
09 Nov 2001 Add HMC cdrom type IPL support - Jan Jaeger
09 Nov 2001 Fix hang in synchronize_broadcast - Greg Smith
09 Nov 2001 Make MODEL_DEPENDENT more specific with CS and STCM - Paul Leisy
08 Nov 2001 Correct/Remove OPTION_REDUCE_INVAL miss-spelling - Paul Leisy
05 Nov 2001 RP needs to INVALIDATE_AEA() since AR loaded - Paul Leisy
02 Nov 2001 Fix SQXR when iteration results are off by 1 - Paul Leisy