@@ -1,4 +1,5 @@
-09 Dev 2001 SIE PER enhancements - Jan Jaeger
+12 Dec 2001 Correct SIE intercept with concurrent PER indication - Jan Jaeger
+09 Dec 2001 SIE PER enhancements - Jan Jaeger
 06 Dec 2001 Basic PER implemention - Jan Jaeger
 05 Dec 2001 Corrected ref and change bits on loadtext - Jan Jaeger
 04 Dec 2001 Rewrite of trace including full 64 bit support - Jan Jaeger
